# CppProject

./: .gitignore  README.md
A_Example/MulitfileCppBuild/: main.cpp
A_Example/SingleCppBuild/: main.cpp
B_DesignPatterns/Bridge/: CMakeLists.txt  OS.h  main.cpp
B_DesignPatterns/Decorator/: main.cpp
B_DesignPatterns/Factory/AbstractFactory/: CMakeLists.txt  Factory.h  Product.h  main.cpp
B_DesignPatterns/Factory/FactoryMethod/: AbstractFactory.h  AbstractProduct.h  CMakeLists.txt  Factory.h  Product.h  main.cpp
B_DesignPatterns/Factory/SimpleFactory/: AbstractProduct.h  CMakeLists.txt  Factory.h  Product.h  main.cpp
DesignPatterns/Bridge/: Phone.h
DesignPatterns/Decorator/: CMakeLists.txt
MulitfileAndMulitSourceCppBuild/: CMakeLists.txt  main.cpp
MulitfileAndMulitSourceCppBuild/math/: CMakeLists.txt  power.h
MulitfileCppBuild/: CMakeLists.txt  power.cpp
SingleCppBuild/: CMakeLists.txt
